grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    print_statement: $ => choice(
      prec(1, seq(
        'print',
        field('to', $.chevron),
        repeat(seq(',', field('argument', $.expression))),
        optional(',')),
      ),
      prec(-3, prec.dynamic(-1, seq(
        'print',
        commaSep1(field('argument', $.expression)),
        optional(','),
      ))),
    ),

    assert_statement: $ => seq(
      'assert',
      commaSep1($.expression),
    ),

    named_expression: $ => seq(
      field('name', $._named_expression_lhs),
      ':=',
      field('value', $.expression),
    ),

    _named_expression_lhs: $ => choice(
      $.identifier,
      $.keyword_identifier,
    ),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
    ),

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    async_for_statement: $ => seq(
      'async',
      'for',
      field('left', $._left_hand_side),
      'in',
      field('right', $._expressions),
      ':',
      field('body', $._suite),
      optional(field('else', $.else_clause)),
    ),

    async_with_statement: $ => seq(
      'async',
      $._with_statement_content,
    ),

    _with_statement_content: $ => seq(
      'with',
      field('with', $.with_clause),
      ':',
      field('body', $._suite),
    ),

    with_clause: $ => choice(
      seq(commaSep1($.with_item), optional(',')),
      seq('(', commaSep1($.with_item), optional(','), ')'),
    ),

    with_item: $ => prec.dynamic(1, seq(
      field('value', $.expression),
    )),

    function_definition: $ => $._function_definition_content,

    async_function_definition: $ => seq(
      'async',
      $._function_definition_content,
    ),

    _function_definition_content: $ => seq(
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),


    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    lambda_parameters: $ => $._parameters,

    list_splat: $ => seq(
      '*',
      $.expression,
    ),

    dictionary_splat: $ => seq(
      '**',
      $.expression,
    ),

    type_parameter: $ => seq(
      '[',
      commaSep1($.type),
      optional(','),
      ']',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    expression_list: $ => prec.right(seq(
      $.expression,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.expression,
          )),
          optional(','),
        ),
      ),
    )),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    _patterns: $ => seq(
      commaSep1($.pattern),
      optional(','),
    ),

    tuple_pattern: $ => seq(
      '(',
      optional($._patterns),
      ')',
    ),

    default_parameter: $ => seq(
      field('name', choice($.identifier, $.tuple_pattern)),
      '=',
      field('value', $.expression),
    ),

    typed_default_parameter: $ => prec(PREC.typed_parameter, seq(
      field('name', $.identifier),
      ':',
      field('type', $.type),
      '=',
      field('value', $.expression),
    )),

    list_splat_pattern: $ => seq(
      '*',
      choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
    ),

    dictionary_splat_pattern: $ => seq(
      '**',
      choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
    ),

    // Extended patterns (patterns allowed in match statement are far more flexible than simple patterns though still a subset of "expression")

    as_pattern: $ => prec.left(seq(
      field('value', $.expression),
      'as',
      field('alias', $.expression),
    )),

    // Expressions

    not_operator: $ => prec(PREC.not, seq(
      'not',
      field('argument', $.expression),
    )),

    bool_op_and: $ => 'and',
    bool_op_or: $ => 'or',

    boolean_operator: $ => choice(
      prec.left(PREC.and, seq(
        field('left', $.expression),
        field('operator', $.bool_op_and),
        field('right', $.expression),
      )),
      prec.left(PREC.or, seq(
        field('left', $.expression),
        field('operator', $.bool_op_or),
        field('right', $.expression),
      )),
    ),

    op_plus: $ => '+',
    op_minus: $ => '-',
    op_mul: $ => '*',
    op_div: $ => '/',
    op_mod: $ => '%',
    op_floordiv: $ => '//',
    op_pow: $ => '**',
    op_bitwise_or: $ => '|',
    op_bitwise_and: $ => '&',
    op_bitwise_xor: $ => '^',
    op_bitwise_not: $ => '~',
    op_lshift: $ => '<<',
    op_rshift: $ => '>>',

    binary_operator: $ => {
      const table = [
        [prec.left, $.op_plus, PREC.plus],
        [prec.left, $.op_minus, PREC.plus],
        [prec.left, $.op_mul, PREC.times],
        [prec.left, $.op_matmul, PREC.times],
        [prec.left, $.op_div, PREC.times],
        [prec.left, $.op_mod, PREC.times],
        [prec.left, $.op_floordiv, PREC.times],
        [prec.right, $.op_pow, PREC.power],
        [prec.left, $.op_bitwise_or, PREC.bitwise_or],
        [prec.left, $.op_bitwise_and, PREC.bitwise_and],
        [prec.left, $.op_bitwise_xor, PREC.xor],
        [prec.left, $.op_lshift, PREC.shift],
        [prec.left, $.op_rshift, PREC.shift],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    unary_operator: $ => prec(PREC.unary, seq(
      field('operator', choice(
        $.op_plus,
        $.op_minus,
        $.op_bitwise_not
      )),
      field('argument', $.primary_expression),
    )),

    cmp_op_lt: $ => '<',
    cmp_op_lte: $ => '<=',
    cmp_op_eq: $ => '==',
    cmp_op_ne: $ => '!=',
    cmp_op_gte: $ => '>=',
    cmp_op_gt: $ => '>',
    cmp_op_ne2: $ => '<>',
    cmp_op_in: $ => 'in',
    cmp_op_not_in: $ => alias(seq('not', 'in'), 'not in'),
    cmp_op_is: $ => 'is',
    cmp_op_is_not: $ => alias(seq('is', 'not'), 'is not'),

    cmp_pair_op_val: $ => seq(
      field('operator',
        choice(
          $.cmp_op_lt,
          $.cmp_op_lte,
          $.cmp_op_eq,
          $.cmp_op_ne,
          $.cmp_op_gte,
          $.cmp_op_gt,
          $.cmp_op_ne2,
          $.cmp_op_in,
          $.cmp_op_not_in,
          $.cmp_op_is,
          $.cmp_op_is_not,
        )),
      field('value', $.primary_expression),
    ),

    comparison_operator: $ => prec.left(PREC.compare, seq(
      field('left', $.primary_expression),
      field('right', repeat1(seq($.cmp_pair_op_val)),
    ))),

    lambda: $ => prec(PREC.lambda, seq(
      'lambda',
      field('parameters', optional($.lambda_parameters)),
      ':',
      field('body', $.expression),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    augmented_assignment: $ => seq(
      field('left', $._left_hand_side),
      field('operator', choice(
        $.op_aug_add,
        $.op_aug_sub,
        $.op_aug_mul,
        $.op_aug_matmul,
        $.op_aug_div,
        $.op_aug_mod,
        $.op_aug_floordiv,
        $.op_aug_pow,
        $.op_aug_lshift,
        $.op_aug_rshift,
        $.op_aug_bitwise_or,
        $.op_aug_bitwise_and,
        $.op_aug_bitwise_xor,
      )),
      field('right', $._right_hand_side),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    pattern_list: $ => seq(
      $.pattern,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.pattern,
          )),
          optional(','),
        ),
      ),
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $._yield,
    ),

    _yield: $ => choice($.yield, $.yield_from),

    yield: $ => prec.right(seq(
      'yield',
      optional(field('value', $._expressions)),
    )),

    yield_from: $ => prec.right(seq(
      'yield',
      'from',
      field('value', $.expression),
    )),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    subscript: $ => prec(PREC.call, seq(
      field('value', $.primary_expression),
      '[',
      commaSep1(field('subscript', choice($.expression, $.slice))),
      optional(','),
      ']',
    )),

    slice: $ => seq(
      field('start', optional($.expression)),
      ':',
      field('stop', optional($.expression)),
      optional(seq(':', field('step', optional($.expression)))),
    ),

    ellipsis: _ => '...',

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),
    generic_type: $ => prec(1, seq(
      choice(
        field('type', $.identifier),
        field('type', alias('type', $.identifier)),
      ),
      field('parameter', $.type_parameter),
    )),
    union_type: $ => prec.left(seq(
      field('left', $.type),
      '|',
      field('right', $.type)
    )),
    keyword_argument: $ => seq(
      field('name', choice($.identifier, $.keyword_identifier)),
      '=',
      field('value', $.expression),
    ),

    // Literals

    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    tuple: $ => seq(
      '(',
      optional($._collection_elements),
      ')',
    ),

    dictionary: $ => seq(
      '{',
      optional(commaSep1(field('elements', choice($.pair, $.dictionary_splat)))),
      optional(','),
      '}',
    ),

    pair: $ => seq(
      field('key', $.expression),
      ':',
      field('value', $.expression),
    ),

    list_comprehension: $ => seq(
      '[',
      field('body', $.expression),
      field('comprehensions', $._comprehension_clauses),
      ']',
    ),

    generator_expression: $ => seq(
      '(',
      field('body', $.expression),
      field('comprehensions', $._comprehension_clauses),
      ')',
    ),

    _comprehension_clauses: $ => seq(
      $._for_or_async_for_in_clause,
      repeat(choice(
        $._for_or_async_for_in_clause,
        $.if_clause,
      )),
    ),

    parenthesized_expression: $ => prec(PREC.parenthesized_expression, seq(
      '(',
      choice($.expression, $._yield),
      ')',
    )),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $._yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    for_in_clause: $ => prec.left($._for_in_clause_body),
    async_for_in_clause: $ => prec.left(seq('async', $._for_in_clause_body)),

    _for_in_clause_body: $ => seq(
      'for',
      field('left', $._left_hand_side),
      'in',
      field('right', commaSep1($._expression_within_for_in_clause)),
      optional(','),
    ),

    conditional_expression: $ => prec.right(PREC.conditional, seq(
      field('if_true', $.expression),
      'if',
      field('condition', $.expression),
      'else',
      field('if_false', $.expression),
    )),

    string: $ => seq(
      field('start', $.string_start),
      field('content', repeat(choice($.interpolation, $.string_content))),
      field('end', $.string_end),
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    escape_sequence: _ => token.immediate(prec(1, seq(
      '\\',
      choice(
        /u[a-fA-F\d]{4}/,
        /U[a-fA-F\d]{8}/,
        /x[a-fA-F\d]{2}/,
        /\d{1,3}/,
        /\r?\n/,
        /['"abfrntv\\]/,
        /N\{[^}]+\}/,
      ),
    ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
        optional(/[jJ]/),
      ));
    },

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    true: _ => 'True',
    none: _ => 'None',

    await: $ => prec(PREC.unary, seq(
      'await',
      $.primary_expression,
    )),
