test/corpus/expressions.txt
================================================================================
Identifiers with Greek letters
================================================================================

ψ1 = β_γ + Ψ_5

--------------------------------------------------------------------------------

(module
  (assignment
    left: (identifier)
    right: (binary_operator
      left: (identifier)
      operator: (op_plus)
      right: (identifier))))

================================================================================
Subscript expressions
================================================================================

a[1]
b[2, 3]
c[4, 5,]

--------------------------------------------------------------------------------

(module
  (subscript
    value: (identifier)
    subscript: (integer))
  (subscript
    value: (identifier)
    subscript: (integer)
    subscript: (integer))
  (subscript
    value: (identifier)
    subscript: (integer)
    subscript: (integer)))

================================================================================
Subscript slice expressions
================================================================================

a[:]
b[5:]
b[5:6, ...]
c[::]

--------------------------------------------------------------------------------

(module
  (subscript
    value: (identifier)
    subscript: (slice))
  (subscript
    value: (identifier)
    subscript: (slice
      start: (integer)))
  (subscript
    value: (identifier)
    subscript: (slice
      start: (integer)
      stop: (integer))
    subscript: (ellipsis))
  (subscript
    value: (identifier)
    subscript: (slice)))

================================================================================
Attribute references
================================================================================

a.b.c

--------------------------------------------------------------------------------

(module
  (attribute
    object: (attribute
      object: (identifier)
      attribute: (identifier))
    attribute: (identifier)))

================================================================================
Await expressions
================================================================================

await i(j, 5)
return await i(j, 5)
async def region_exists(region: str) -> bool:
    return region in await all_regions()

assert await a(b) == c

--------------------------------------------------------------------------------

(module
  (await
    (call
      function: (identifier)
      arguments: (argument_list
        (identifier)
        (integer))))
  (return_statement
    (await
      (call
        function: (identifier)
        arguments: (argument_list
          (identifier)
          (integer)))))
  (async_function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type
          (identifier))))
    return_type: (type
      (identifier))
    body: (block
      (return_statement
        (comparison_operator
          left: (identifier)
          right: (cmp_pair_op_val
            operator: (cmp_op_in)
            value: (await
              (call
                function: (identifier)
                arguments: (argument_list))))))))
  (assert_statement
    (comparison_operator
      left: (await
        (call
          function: (identifier)
          arguments: (argument_list
            (identifier))))
      right: (cmp_pair_op_val
        operator: (cmp_op_eq)
        value: (identifier)))))

================================================================================
Call expressions
================================================================================

__a__()
b(1)
c(e, f=g)
i(j, 5,)

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list))
  (call
    (identifier)
    (argument_list
      (integer)))
  (call
    (identifier)
    (argument_list
      (identifier)
      (keyword_argument
        (identifier)
        (identifier))))
  (call
    (identifier)
    (argument_list
      (identifier)
      (integer))))

================================================================================
Print used as an identifier
================================================================================

print()
print(a)
print(a, b=c)
print(d, e)
print(d, *e)
print(*f, **g,)
a(print)

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list))
  (call
    (identifier)
    (argument_list
      (identifier)))
  (call
    (identifier)
    (argument_list
      (identifier)
      (keyword_argument
        (identifier)
        (identifier))))
  (call
    (identifier)
    (argument_list
      (identifier)
      (identifier)))
  (call
    (identifier)
    (argument_list
      (identifier)
      (list_splat
        (identifier))))
  (call
    (identifier)
    (argument_list
      (list_splat
        (identifier))
      (dictionary_splat
        (identifier))))
  (call
    (identifier)
    (argument_list
      (identifier))))

================================================================================
Print used as a parameter
================================================================================

def a(print):
  b
def a(printer=print):
  c
def a(*print):
  b
def a(**print):
  b
def print():
  a

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (identifier))
    (block
      (identifier)))
  (function_definition
    (identifier)
    (parameters
      (default_parameter
        (identifier)
        (identifier)))
    (block
      (identifier)))
  (function_definition
    (identifier)
    (parameters
      (list_splat_pattern
        (identifier)))
    (block
      (identifier)))
  (function_definition
    (identifier)
    (parameters
      (dictionary_splat_pattern
        (identifier)))
    (block
      (identifier)))
  (function_definition
    (identifier)
    (parameters)
    (block
      (identifier))))

================================================================================
Exec used as an identifier
================================================================================

exec("print \"'%s' has %i characters\" % (public_function(), len(public_function()))", {"__builtins__" : None}, safe_dict)
exec("""exec _code_ in _globs_, _locs_""")

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list
      (string
        (string_start)
        (string_content
          (escape_sequence)
          (escape_sequence))
        (string_end))
      (dictionary
        (pair
          (string
            (string_start)
            (string_content)
            (string_end))
          (none)))
      (identifier)))
  (call
    (identifier)
    (argument_list
      (string
        (string_start)
        (string_content)
        (string_end)))))

================================================================================
Async / await used as identifiers
================================================================================

async = 4
await = 5
print async, await

--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (integer))
  (print_statement
    (identifier)
    (identifier)))

================================================================================
Calls with splats
================================================================================

a(*())
a(**{})
a(*b)
c(d, *e, **g)

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list
      (list_splat
        (tuple))))
  (call
    (identifier)
    (argument_list
      (dictionary_splat
        (dictionary))))
  (call
    (identifier)
    (argument_list
      (list_splat
        (identifier))))
  (call
    (identifier)
    (argument_list
      (identifier)
      (list_splat
        (identifier))
      (dictionary_splat
        (identifier)))))

================================================================================
Math operators
================================================================================

a + b * c ** d - e / 5
a // 2
-5
+x
~x

--------------------------------------------------------------------------------

(module
  (binary_operator
    (binary_operator
      (identifier)
      (op_plus)
      (binary_operator
        (identifier)
        (op_mul)
        (binary_operator
          (identifier)
          (op_pow)
          (identifier))))
    (op_minus)
    (binary_operator
      (identifier)
      (op_div)
      (integer)))
  (binary_operator
    (identifier)
    (op_floordiv)
    (integer))
  (unary_operator
    (op_minus)
    (integer))
  (unary_operator
    (op_plus)
    (identifier))
  (unary_operator
    (op_bitwise_not)
    (identifier)))

================================================================================
Binary Addition / Subtraction With Floats
================================================================================

.1-.0
.1+.0
.1-0
.1+0

1-.0
1+.0

--------------------------------------------------------------------------------

(module
  (binary_operator
    (float)
    (op_minus)
    (float))
  (binary_operator
    (float)
    (op_plus)
    (float))
  (binary_operator
    (float)
    (op_minus)
    (integer))
  (binary_operator
    (float)
    (op_plus)
    (integer))
  (binary_operator
    (integer)
    (op_minus)
    (float))
  (binary_operator
    (integer)
    (op_plus)
    (float)))

================================================================================
Power Operator Precedence
================================================================================

2**2**3
-2**2

--------------------------------------------------------------------------------

(module
  (binary_operator
    (integer)
    (op_pow)
    (binary_operator
      (integer)
      (op_pow)
      (integer)))
  (unary_operator
    (op_minus)
    (binary_operator
      (integer)
      (op_pow)
      (integer))))

================================================================================
Operator precedence
================================================================================

a() + b[c] * c.d.e

--------------------------------------------------------------------------------

(module
  (binary_operator
    left: (call
      function: (identifier)
      arguments: (argument_list))
    operator: (op_plus)
    right: (binary_operator
      left: (subscript
        value: (identifier)
        subscript: (identifier))
      operator: (op_mul)
      right: (attribute
        object: (attribute
          object: (identifier)
          attribute: (identifier))
        attribute: (identifier)))))

================================================================================
Bitwise operators
================================================================================

a << b | c >> d & e ^ f

--------------------------------------------------------------------------------

(module
  (binary_operator
    (binary_operator
      (identifier)
      (op_lshift)
      (identifier))
    (op_bitwise_or)
    (binary_operator
      (binary_operator
        (identifier)
        (op_rshift)
        (identifier))
      (op_bitwise_and)
      (binary_operator
        (identifier)
        (op_bitwise_xor)
        (identifier)))))

================================================================================
Boolean operators
================================================================================

a or b and c
not d
not a and b or c
a and not b and c

--------------------------------------------------------------------------------

(module
  (boolean_operator
    (identifier)
    (bool_op_or)
    (boolean_operator
      (identifier)
      (bool_op_and)
      (identifier)))
  (not_operator
    (identifier))
  (boolean_operator
    (boolean_operator
      (not_operator
        (identifier))
      (bool_op_and)
      (identifier))
    (bool_op_or)
    (identifier))
  (boolean_operator
    (boolean_operator
      (identifier)
      (bool_op_and)
      (not_operator
        (identifier)))
    (bool_op_and)
    (identifier)))

================================================================================
Comparison operators
================================================================================

a < b <= c == d >= e > f
not a == b or c == d
a not in b
a is not b
a is b and c != d
a <> b

--------------------------------------------------------------------------------

(module
  (comparison_operator
    (identifier)
    (cmp_pair_op_val
      (cmp_op_lt)
      (identifier))
    (cmp_pair_op_val
      (cmp_op_lte)
      (identifier))
    (cmp_pair_op_val
      (cmp_op_eq)
      (identifier))
    (cmp_pair_op_val
      (cmp_op_gte)
      (identifier))
    (cmp_pair_op_val
      (cmp_op_gt)
      (identifier)))
  (boolean_operator
    (not_operator
      (comparison_operator
        (identifier)
        (cmp_pair_op_val
          (cmp_op_eq)
          (identifier))))
    (bool_op_or)
    (comparison_operator
      (identifier)
      (cmp_pair_op_val
        (cmp_op_eq)
        (identifier))))
  (comparison_operator
    (identifier)
    (cmp_pair_op_val
      (cmp_op_not_in)
      (identifier)))
  (comparison_operator
    (identifier)
    (cmp_pair_op_val
      (cmp_op_is_not)
      (identifier)))
  (boolean_operator
    (comparison_operator
      (identifier)
      (cmp_pair_op_val
        (cmp_op_is)
        (identifier)))
    (bool_op_and)
    (comparison_operator
      (identifier)
      (cmp_pair_op_val
        (cmp_op_ne)
        (identifier))))
  (comparison_operator
    (identifier)
      (cmp_pair_op_val
        (cmp_op_ne2)
        (identifier))))

================================================================================
Assignments
================================================================================

a = 1
a, b = 1, 2
a, *c = 1, 2, 3
a, = 1, 2
a[b] = c = d
a, *b.c = d

--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (integer))
  (assignment
    (pattern_list
      (identifier)
      (identifier))
    (expression_list
      (integer)
      (integer)))
  (assignment
    (pattern_list
      (identifier)
      (list_splat_pattern
        (identifier)))
    (expression_list
      (integer)
      (integer)
      (integer)))
  (assignment
    (pattern_list
      (identifier))
    (expression_list
      (integer)
      (integer)))
  (assignment
    (subscript
      (identifier)
      (identifier))
    (assignment
      (identifier)
      (identifier)))
  (assignment
    (pattern_list
      (identifier)
      (list_splat_pattern
        (attribute
          (identifier)
          (identifier))))
    (identifier)))

================================================================================
Assignments with type annotations
================================================================================

tail_leaves: List[Leaf] = []

--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (type
      (generic_type
        (identifier)
        (type_parameter
          (type
            (identifier)))))
    (list)))

================================================================================
Augmented assignments
================================================================================

a += 1
b >>= 2
c //= 1
d @= e
f -= 2
g %= 2
h /= 5
i *= 2.2
j &= 1
k ^= 0
l <<= 2
m |= k
n **= 3

--------------------------------------------------------------------------------

(module
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (identifier))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (float))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (integer))
  (augmented_assignment
    (identifier)
    (identifier))
  (augmented_assignment
    (identifier)
    (integer)))

================================================================================
Named expressions
================================================================================

a := x
(y := f(x))
foo(x=(y := f(x)))
y0 = (y1 := f(x))
def foo(answer=(p := 42)):
  return answer;
def foo(answer: (p := 42) = 5):
  return answer;
foo(x := 3, cat='vector')
(z := (y := (x := 0)))

--------------------------------------------------------------------------------

(module
  (named_expression
    name: (identifier)
    value: (identifier))
  (parenthesized_expression
    (named_expression
      name: (identifier)
      value: (call
        function: (identifier)
        arguments: (argument_list
          (identifier)))))
  (call
    function: (identifier)
    arguments: (argument_list
      (keyword_argument
        name: (identifier)
        value: (parenthesized_expression
          (named_expression
            name: (identifier)
            value: (call
              function: (identifier)
              arguments: (argument_list
                (identifier))))))))
  (assignment
    left: (identifier)
    right: (parenthesized_expression
      (named_expression
        name: (identifier)
        value: (call
          function: (identifier)
          arguments: (argument_list
            (identifier))))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (default_parameter
        name: (identifier)
        value: (parenthesized_expression
          (named_expression
            name: (identifier)
            value: (integer)))))
    body: (block
      (return_statement
        (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_default_parameter
        name: (identifier)
        type: (type
          (parenthesized_expression
            (named_expression
              name: (identifier)
              value: (integer))))
        value: (integer)))
    body: (block
      (return_statement
        (identifier))))
  (call
    function: (identifier)
    arguments: (argument_list
      (named_expression
        name: (identifier)
        value: (integer))
      (keyword_argument
        name: (identifier)
        value: (string
          (string_start)
          (string_content)
          (string_end)))))
  (parenthesized_expression
    (named_expression
      name: (identifier)
      value: (parenthesized_expression
        (named_expression
          name: (identifier)
          value: (parenthesized_expression
            (named_expression
              name: (identifier)
              value: (integer))))))))

================================================================================
Yield expressions
================================================================================

def example():
  yield
  yield 1
  x = yield 2
  yield from a
  yield from (yield from (x for x in range(1, 10)))

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (yield)
      (yield
        value: (integer))
      (assignment
        left: (identifier)
        right: (yield
          value: (integer)))
      (yield_from
        value: (identifier))
      (yield_from
        value: (parenthesized_expression
          (yield_from
            value: (generator_expression
              body: (identifier)
              comprehensions: (for_in_clause
                left: (identifier)
                right: (call
                  function: (identifier)
                  arguments: (argument_list
                    (integer)
                    (integer)))))))))))

================================================================================
lambdas
================================================================================

lambda b, c: d("e" % f)
lambda: True
lambda a, b = c, *d, **e: a
lambda (a, b): (a, b)

--------------------------------------------------------------------------------

(module
  (lambda
    (lambda_parameters
      (identifier)
      (identifier))
    (call
      (identifier)
      (argument_list
        (binary_operator
          (string
            (string_start)
            (string_content)
            (string_end))
          (op_mod)
          (identifier)))))
  (lambda
    (true))
  (lambda
    (lambda_parameters
      (identifier)
      (default_parameter
        (identifier)
        (identifier))
      (list_splat_pattern
        (identifier))
      (dictionary_splat_pattern
        (identifier)))
    (identifier))
  (lambda
    (lambda_parameters
      (tuple_pattern
        (identifier)
        (identifier)))
    (tuple
      (identifier)
      (identifier))))

================================================================================
Tuples with splats
================================================================================

(foo, *bar, *baz)

--------------------------------------------------------------------------------

(module
  (tuple
    (identifier)
    (list_splat
      (identifier))
    (list_splat
      (identifier))))

================================================================================
Tuples with yield
================================================================================

(a, yield a, b, c)

--------------------------------------------------------------------------------

(module
  (tuple
    (identifier)
    (yield
      (expression_list
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Default Tuple Arguments
================================================================================

def comp_args((a, b)=(3, 4)):
    return a, b

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (default_parameter
        (tuple_pattern
          (identifier)
          (identifier))
        (tuple
          (integer)
          (integer))))
    (block
      (return_statement
        (expression_list
          (identifier)
          (identifier))))))

================================================================================
Conditional if expressions
================================================================================

a = b if c else d
something() if a else d
slice(1,1,1) if a else d

--------------------------------------------------------------------------------

(module
  (assignment
    left: (identifier)
    right: (conditional_expression
      if_true: (identifier)
      condition: (identifier)
      if_false: (identifier)))
  (conditional_expression
    if_true: (call
      function: (identifier)
      arguments: (argument_list))
    condition: (identifier)
    if_false: (identifier))
  (conditional_expression
    if_true: (call
      function: (identifier)
      arguments: (argument_list
        (integer)
        (integer)
        (integer)))
    condition: (identifier)
    if_false: (identifier)))

================================================================================
Async context managers and iterators
================================================================================

async with a as b:
  async for c in d:
     [e async for f in g]

--------------------------------------------------------------------------------

(module
  (async_with_statement
    with: (with_clause
      (with_item
        value: (as_pattern
          value: (identifier)
          alias: (identifier))))
    body: (block
      (async_for_statement
        left: (identifier)
        right: (identifier)
        body: (block
          (list_comprehension
            body: (identifier)
            comprehensions: (async_for_in_clause
              left: (identifier)
              right: (identifier))))))))

================================================================================
Arbitrary indentation between brackets
================================================================================

def a():
    b(
1,
2
    )

    c = [
3
    ]

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (call
        function: (identifier)
        arguments: (argument_list
          (integer)
          (integer)))
      (assignment
        left: (identifier)
        right: (list
          (integer))))))

================================================================================
Splat Inside of Expression List
================================================================================

a,c = [1,2],3
w, x, y, z = 0, *a, c

--------------------------------------------------------------------------------

(module
  (assignment
    left: (pattern_list
      (identifier)
      (identifier))
    right: (expression_list
      (list
        (integer)
        (integer))
      (integer)))
  (assignment
    left: (pattern_list
      (identifier)
      (identifier)
      (identifier)
      (identifier))
    right: (expression_list
      (integer)
      (list_splat
        (identifier))
      (identifier))))

================================================================================
A function called match
================================================================================

match(r1, r2, r3)

--------------------------------------------------------------------------------

(module
  (call
    (identifier)
    (argument_list
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Type expressions
================================================================================

a: A[T] | B
y: type[int] = int

--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (type
      (union_type
        (type
          (generic_type
            (identifier)
            (type_parameter
              (type
                (identifier)))))
        (type
          (identifier)))))
  (assignment
    (identifier)
    (type
      (generic_type
        (identifier)
        (type_parameter
          (type
            (identifier)))))
    (identifier)))
